# rust_web_server

./: 404.html  Cargo.toml  index.html
src/: get_address.rs  main.rs
