[package]
name = "web_server_api_calling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
actix-web = "3.3.2"
serde_json = "1.0.95"